[gd_scene load_steps=4 format=3 uid="uid://cjp8uk6p1a5l7"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_20biu"]
[ext_resource type="PackedScene" uid="uid://b2rg6aqw3tdmq" path="res://assets/blazium.tscn" id="2_rnpcj"]
[ext_resource type="Script" path="res://menus/general/Autofocus.gd" id="3_rsdx6"]

[node name="MainMenu" type="PanelContainer" node_paths=PackedStringArray("peer_name_line_edit", "name_label", "logs", "menu", "set_name_menu", "set_name_button", "multiplayer_button", "quit_button", "left_spacer", "right_spacer")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"BgPanel"
script = ExtResource("1_20biu")
peer_name_line_edit = NodePath("HBoxContainer/ColorRect/VBoxContainer/VBoxContainerName/LineEdit")
name_label = NodePath("HBoxContainer/ColorRect/VBoxContainer/NameLabel")
logs = NodePath("HBoxContainer/ColorRect/VBoxContainer/Logs")
menu = NodePath("HBoxContainer/ColorRect/VBoxContainer/VBoxContainerSelection")
set_name_menu = NodePath("HBoxContainer/ColorRect/VBoxContainer/VBoxContainerName")
set_name_button = NodePath("HBoxContainer/ColorRect/VBoxContainer/VBoxContainerName/SetName")
multiplayer_button = NodePath("HBoxContainer/ColorRect/VBoxContainer/VBoxContainerSelection/ButtonMultiplayer")
quit_button = NodePath("HBoxContainer/ColorRect/VBoxContainer/QuitButton")
left_spacer = NodePath("HBoxContainer/LeftSpacer")
right_spacer = NodePath("HBoxContainer/RightSpacer")

[node name="Blazium" parent="." instance=ExtResource("2_rnpcj")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="LeftSpacer" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"ContentPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect"]
layout_mode = 2

[node name="Title" type="Label" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Hangman"
horizontal_alignment = 1
autowrap_mode = 3

[node name="PaddingTop" type="Control" parent="HBoxContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBoxContainer/ColorRect/VBoxContainer"]
visible = false
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Hello, name"
horizontal_alignment = 1

[node name="VBoxContainerName" type="VBoxContainer" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainerName"]
layout_mode = 2
placeholder_text = "Name (required)"
alignment = 1
max_length = 16
script = ExtResource("3_rsdx6")

[node name="SetName" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainerName"]
layout_mode = 2
disabled = true
text = "Set name"

[node name="VBoxContainerSelection" type="VBoxContainer" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="ButtonMultiplayer" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainerSelection"]
layout_mode = 2
size_flags_horizontal = 3
text = "Multiplayer"

[node name="ButtonSettings" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainerSelection"]
layout_mode = 2
size_flags_horizontal = 3
text = "Settings"

[node name="Logs" type="Label" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
horizontal_alignment = 1

[node name="Padding2" type="Control" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuitButton" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer"]
visible = false
layout_mode = 2
text = "Quit"

[node name="RightSpacer" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="text_changed" from="HBoxContainer/ColorRect/VBoxContainer/VBoxContainerName/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="HBoxContainer/ColorRect/VBoxContainer/VBoxContainerName/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="HBoxContainer/ColorRect/VBoxContainer/VBoxContainerName/SetName" to="." method="_on_set_name_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/VBoxContainer/VBoxContainerSelection/ButtonMultiplayer" to="." method="_on_button_join_public_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/VBoxContainer/VBoxContainerSelection/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
